--- a/seed/seed-projects.json
+++ b/seed/seed-projects.json
@@ -1,6 +1,6 @@
 [
   {
-    "name": "Project 1",
+    "title": "Project 1",
     "slug": "project-1",
     "description": "This is project 1",
     "imageUrl": "https://picsum.photos/200",
@@ -8,14 +8,14 @@
     "demoUrl": "https://demo.com"
   },
   {
-    "name": "Project 2",
+    "title": "Project 2",
     "slug": "project-2",
     "description": "This is project 2",
     "imageUrl": "https://picsum.photos/200",
     "githubUrl": "https://github.com"
   },
   {
-    "name": "Project 3",
+    "title": "Project 3",
     "slug": "project-3",
     "description": "This is project 3",
     "imageUrl": "https://picsum.photos/200",
@@ -23,7 +23,7 @@
     "demoUrl": "https://demo.com"
   },
   {
-    "name": "Project 4",
+    "title": "Project 4",
     "slug": "project-4",
     "description": "This is project 4",
     "imageUrl": "https://picsum.photos/200",
