--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "postgres": "^3.4.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
