--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "clsx": "^2.1.1",
     "mongodb": "^6.14.2",
     "next": "^15.2.4",
     "postgres": "^3.4.5",
