--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "validate:project-skills": "ts-node seed/validate-project-skills.ts"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
