--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "validate:project-skills": "ts-node seed/validate-project-skills.ts"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "clsx": "^2.1.1",
     "mongodb": "^6.14.2",
